agrego cv y modifico tecnologias

--- a/index-en.html
+++ b/index-en.html
@@ -2,27 +2,27 @@
 <html lang="es">
 
 <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="author" content="Dereck Montes" />
-    <meta name="description" content="Portafolio profesional" />
-    <meta name="keywords" content="portafolio, cv, desarrollo" />
-    <meta name="theme-color" content="#09f" />
-    <meta name="view-transition" content="same-origin" />
-    <!-- Iconos  -->
-    <link href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css" rel="stylesheet" />
-    <!-- Fuente  -->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link
-      href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
-      rel="stylesheet">
-    <title>Dereck's Portafolio</title>
-    <link rel="icon" href="assets/img/ilustracion-logo.png" type="image/png" />
-    <link rel="stylesheet" href="assets/css/style.css" />
-    <script type="module" src="assets/js/main.js"></script>
-  </head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="author" content="Dereck Montes" />
+  <meta name="description" content="Portafolio profesional" />
+  <meta name="keywords" content="portafolio, cv, desarrollo" />
+  <meta name="theme-color" content="#09f" />
+  <meta name="view-transition" content="same-origin" />
+  <!-- Iconos  -->
+  <link href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css" rel="stylesheet" />
+  <!-- Fuente  -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link
+    href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+    rel="stylesheet">
+  <title>Dereck's Portafolio</title>
+  <link rel="icon" href="assets/img/ilustracion-logo.png" type="image/png" />
+  <link rel="stylesheet" href="assets/css/style.css" />
+  <script type="module" src="assets/js/main.js"></script>
+</head>
 
 <body>
   <!-- Loader -->
@@ -70,11 +70,11 @@
           </label>
         </div>
         <div class="navbar__toggle--language flex--container">
-            <input type="checkbox" id="language-toggle" class="navbar__toggle--language-input" />
-            <label for="language-toggle" class="navbar__toggle--language-label"></label>
-          </div>
+          <input type="checkbox" id="language-toggle" class="navbar__toggle--language-input" />
+          <label for="language-toggle" class="navbar__toggle--language-label"></label>
+        </div>
       </div>
-      <a href="#nav" ><i class="bx bx-menu btn__open navbar__icon"></i></a>
+      <a href="#nav"><i class="bx bx-menu btn__open navbar__icon"></i></a>
       <!-- <a href="#" id="btn__open"><i class="bx bx-menu btn__open navbar__icon"></i></a> -->
     </nav>
   </header>
@@ -83,22 +83,27 @@
     <section id="home" class="home">
       <div class="home__container grid--container">
         <div class="home__image">
-          <img class="body" src="assets/img/Illustration_manversion.png" alt="profile photo"  />
-          <img class="arm" src="assets/img/Illustration_armversion.png" alt="profile photo"  />
+          <img class="body" src="assets/img/Illustration_manversion.png" alt="profile photo" />
+          <img class="arm" src="assets/img/Illustration_armversion.png" alt="profile photo" />
         </div>
 
         <ul class="home__social flex--container">
           <li class="home__social-item">
-            <a class="home__social-link" href="https://linkedin.com/in/dereck-eduardo/" target="_blank"><i class="bx bxl-linkedin"></i></a>
+            <a class="home__social-link" href="https://linkedin.com/in/dereck-eduardo/" target="_blank"><i
+                class="bx bxl-linkedin"></i></a>
           </li>
           <li class="home__social-item">
-            <a class="home__social-link" href="https://wa.me/573233094729?text=Hola,%20quisiera%20contratarte." target="_blank"><i class="bx bxl-whatsapp"></i></a>
+            <a class="home__social-link" href="https://wa.me/573233094729?text=Hola,%20quisiera%20contratarte."
+              target="_blank"><i class="bx bxl-whatsapp"></i></a>
           </li>
           <li class="home__social-item">
-            <a class="home__social-link" href="https://github.com/dereckmg2803" target="_blank"><i class="bx bxl-github"></i></a>
+            <a class="home__social-link" href="https://github.com/dereckmg2803" target="_blank"><i
+                class="bx bxl-github"></i></a>
           </li>
           <li class="home__social-item">
-            <a class="home__social-link" href="mailto:dereck.mg2803@gmail.com?subject=Asunto%20del%20mensaje&body=Cuerpo%20del%20mensaje" target="_blank"><i class="bx bx-envelope"></i></a>
+            <a class="home__social-link"
+              href="mailto:dereck.mg2803@gmail.com?subject=Asunto%20del%20mensaje&body=Cuerpo%20del%20mensaje"
+              target="_blank"><i class="bx bx-envelope"></i></a>
           </li>
         </ul>
 
@@ -111,9 +116,9 @@
         </div>
 
         <div class="home__buttons">
-          <a class="btn btn--primary" href="#" title="Descargar mi CV" id="download-cv" rel="noreferrer nofollow">
+          <a class="btn btn--primary" href="#" title="Descargar mi CV" id="download-cv-en" rel="noreferrer nofollow">
             Download CV
-          </a>                  
+          </a>
         </div>
       </div>
     </section>
@@ -122,7 +127,10 @@
 
       <div class="about__container grid--container">
         <p class="about__description">
-            When it comes to my hobbies i find balance, especially when i enjoy nature and  practicemartial arts. Nature inspires me to stay focused and renewed, seeking peace and mental clarity in its quiet spaces. Sport, on the other hand, has taught me discipline, perseverance and the importance of working as a team, values ​​that I apply both in my personal and professional life.        
+          When it comes to my hobbies i find balance, especially when i enjoy nature and practicemartial arts. Nature
+          inspires me to stay focused and renewed, seeking peace and mental clarity in its quiet spaces. Sport, on the
+          other hand, has taught me discipline, perseverance and the importance of working as a team, values ​​that I
+          apply both in my personal and professional life.
         </p>
 
         <div class="about__cards flex--container">
@@ -149,31 +157,37 @@
 
       <div class="skills__container grid--container">
         <p class="skills__description flex--container">
-            I am a professional with a solid foundation in web and mobile application development, always willing to learn and adapt to new technologies. My key skills include:
+          I am a professional with a solid foundation in web and mobile application development, always willing to learn
+          and adapt to new technologies. My key skills include:
         <div class="skills__wrapper flex--container">
           <div class="skills__cards flex--container">
             <!--Card 1 -->
             <details class="skills__cards-container" name="moreInfo" open>
               <summary class="skills__cards-title flex--container">
-                <i class="bx bxl-html5 flex--container"></i>
+                <i class="bx bxl-react flex--container"></i>
               </summary>
               <div class="skills__card-container">
-                <h3 class="skills__card-title">HTML</h3>
+                <h3 class="skills__card-title">React</h3>
 
                 <p class="skills__card-description">
-                    Strong knowledge in creating web structures using HTML5, ensuring correct semantics and accessibility in interface development. Ability to create well-organized web pages, using standard tags and optimizing content for better performance.                </p>
+                  Experience in building dynamic user interfaces and reusable components with React. Skilled in state
+                  management, props, and hooks to create modern, efficient, and scalable web applications.
+                </p>
               </div>
             </details>
+
             <!--Card 2 -->
             <details class="skills__cards-container" name="moreInfo">
               <summary class="skills__cards-title flex--container">
-                <i class="bx bxl-css3 flex--container"></i>
+                <i class="bx bxl-nodejs flex--container"></i>
               </summary>
               <div class="skills__card-container">
-                <h3 class="skills__card-title">CSS3</h3>
+                <h3 class="skills__card-title">Node.js</h3>
 
                 <p class="skills__card-description">
-                    Experience in CSS3 to design attractive and responsive visual interfaces. Knowledge of Flexbox and Grid to create fluid and adaptive layouts, ensuring that web pages look good on different devices.                </p>
+                  Proficient in server-side development using Node.js. Experience in creating RESTful APIs, integrating
+                  databases, and building fast and scalable backend applications with JavaScript.
+                </p>
               </div>
             </details>
             <!--Card 3 -->
@@ -185,7 +199,9 @@
                 <h3 class="skills__card-title">Javascript</h3>
 
                 <p class="skills__card-description">
-                    JavaScript skills to develop interactivity in web applications. Experience in DOM manipulation, event handling, and working with JSON to interact with APIs. Additionally, I have worked with Node.js for back-end and API development.                </p>
+                  JavaScript skills to develop interactivity in web applications. Experience in DOM manipulation, event
+                  handling, and working with JSON to interact with APIs. Additionally, I have worked with Node.js for
+                  back-end and API development. </p>
               </div>
             </details>
             <!--Card 4 -->
@@ -197,7 +213,9 @@
                 <h3 class="skills__card-title">Github</h3>
 
                 <p class="skills__card-description">
-                    Expert use of Git and GitHub for version control and collaboration on development projects. Familiarity with branches, merges, pull requests, and conflict resolution. This workflow allows me to collaborate effectively in teams.                </p>
+                  Expert use of Git and GitHub for version control and collaboration on development projects.
+                  Familiarity with branches, merges, pull requests, and conflict resolution. This workflow allows me to
+                  collaborate effectively in teams. </p>
               </div>
             </details>
           </div>
@@ -228,7 +246,8 @@
             <div class="projects__info">
               <h3 class="projects__name">SGPA</h3>
               <p class="projects__description">
-                web platform designed to facilitate the management of academic projects within the university, using Java, PrimeFaces and XHTML.
+                web platform designed to facilitate the management of academic projects within the university, using
+                Java, PrimeFaces and XHTML.
               </p>
               <div class="projects__buttons">
                 <button class="btn projects__button" type="button">
@@ -242,13 +261,14 @@
         <div class="projects__project">
           <div class="projects__inner grid--container">
             <div class="projects__image">
-              <img src="assets/img/autosoft_proyecto.png"" alt="project 1" title="Autosoft Project" />
+              <img src="assets/img/autosoft_proyecto.png"" alt=" project 1" title="Autosoft Project" />
             </div>
 
             <div class="projects__info">
               <h3 class="projects__name">Autosoft</h3>
               <p class="projects__description">
-                Web application to optimize internal operations of automotive workshops, using PHP and MySQL for business logic and database.
+                Web application to optimize internal operations of automotive workshops, using PHP and MySQL for
+                business logic and database.
               </p>
 
               <div class="projects__buttons">
@@ -269,7 +289,8 @@
             <div class="projects__info">
               <h3 class="projects__name">TouriC</h3>
               <p class="projects__description">
-                Interactive chatbot to provide tourist information in Cartagena, developed with Flutter (Dart) and the Gemini API.
+                Interactive chatbot to provide tourist information in Cartagena, developed with Flutter (Dart) and the
+                Gemini API.
               </p>
 
               <div class="projects__buttons">
@@ -290,7 +311,8 @@
             <div class="projects__info">
               <h3 class="projects__name">Tenisco</h3>
               <p class="projects__description">
-                E-commerce platform developed with React, Redux and Tailwind CSS for the sale of tennis shoes in Colombia.
+                E-commerce platform developed with React, Redux and Tailwind CSS for the sale of tennis shoes in
+                Colombia.
               </p>
 
               <div class="projects__buttons">
@@ -337,7 +359,9 @@
               <i class="bx bxs-envelope"></i>
 
               <span class="contact__info-mail">
-                <a id="mail" href="mailto:dereck.mg2803@gmail.com?subject=Asunto%20del%20mensaje&body=Cuerpo%20del%20mensaje" target="_blank" rel="noreferrer nofollow">
+                <a id="mail"
+                  href="mailto:dereck.mg2803@gmail.com?subject=Asunto%20del%20mensaje&body=Cuerpo%20del%20mensaje"
+                  target="_blank" rel="noreferrer nofollow">
                   dereck.mg2803@gmail.com
                 </a>
               </span>
@@ -373,12 +397,12 @@
               <textarea id="message" name="message" cols="30" rows="10" class="contact__form-input"></textarea>
             </div>
             <dialog class="contact__form-modal" id="modal">
-                Form sent successfully!
+              Form sent successfully!
               <button type="reset" id="btn_close-modal">Close</button>
             </dialog>
 
             <button type="submit" class="btn contact__form-button">
-                Send
+              Send
             </button>
           </form>
         </div>
@@ -390,7 +414,7 @@
       <div class="footer__info">
         <h3 class="footer__title">Dereck's Portafolio</h3>
         <p class="footer__description">
-            Technology is my world, and every line of code is an opportunity to innovate.
+          Technology is my world, and every line of code is an opportunity to innovate.
         </p>
       </div>
 
@@ -399,22 +423,24 @@
 
         <ul class="footer__social-list">
           <li class="footer__social-item">
-            <a class="footer__social-link" href="https://linkedin.com/in/dereck-eduardo/" target="_blank" rel="noreferrer nofollow"><i
-                class="bx bxl-linkedin"></i></a>
+            <a class="footer__social-link" href="https://linkedin.com/in/dereck-eduardo/" target="_blank"
+              rel="noreferrer nofollow"><i class="bx bxl-linkedin"></i></a>
           </li>
 
           <li class="footer__social-item">
-            <a class="footer__social-link" href="https://wa.me/573233094729?text=Hola,%20quisiera%20contratarte." target="_blank" rel="noreferrer nofollow"><i
-                class="bx bxl-whatsapp"></i></a>
+            <a class="footer__social-link" href="https://wa.me/573233094729?text=Hola,%20quisiera%20contratarte."
+              target="_blank" rel="noreferrer nofollow"><i class="bx bxl-whatsapp"></i></a>
           </li>
 
           <li class="footer__social-item">
-            <a class="footer__social-link" href="https://github.com/dereckmg2803" target="_blank" rel="noreferrer nofollow"><i
-                class="bx bxl-github"></i></a>
+            <a class="footer__social-link" href="https://github.com/dereckmg2803" target="_blank"
+              rel="noreferrer nofollow"><i class="bx bxl-github"></i></a>
           </li>
 
           <li class="footer__social-item">
-            <a class="footer__social-link" href="mailto:dereck.mg2803@gmail.com?subject=Asunto%20del%20mensaje&body=Cuerpo%20del%20mensaje" target="_blank" rel="noreferrer nofollow"><i class="bx bx-envelope"></i></a>
+            <a class="footer__social-link"
+              href="mailto:dereck.mg2803@gmail.com?subject=Asunto%20del%20mensaje&body=Cuerpo%20del%20mensaje"
+              target="_blank" rel="noreferrer nofollow"><i class="bx bx-envelope"></i></a>
           </li>
         </ul>
       </div>
