--- a/index.html
+++ b/index.html
@@ -1,28 +1,28 @@
 <!DOCTYPE html>
 <html lang="es">
 
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="author" content="Dereck Montes" />
-    <meta name="description" content="Portafolio profesional" />
-    <meta name="keywords" content="portafolio, cv, desarrollo" />
-    <meta name="theme-color" content="#09f" />
-    <meta name="view-transition" content="same-origin" />
-    <!-- Iconos  -->
-    <link href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css" rel="stylesheet" />
-    <!-- Fuente  -->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link
-      href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
-      rel="stylesheet">
-    <title>Dereck's Portafolio</title>
-    <link rel="icon" href="assets/img/ilustracion-logo.png" type="image/png" />
-    <link rel="stylesheet" href="assets/css/style.css" />
-    <script type="module" src="assets/js/main.js"></script>
-  </head>
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="author" content="Dereck Montes" />
+  <meta name="description" content="Portafolio profesional" />
+  <meta name="keywords" content="portafolio, cv, desarrollo" />
+  <meta name="theme-color" content="#09f" />
+  <meta name="view-transition" content="same-origin" />
+  <!-- Iconos  -->
+  <link href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css" rel="stylesheet" />
+  <!-- Fuente  -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link
+    href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+    rel="stylesheet">
+  <title>Dereck's Portafolio</title>
+  <link rel="icon" href="assets/img/ilustracion-logo.png" type="image/png" />
+  <link rel="stylesheet" href="assets/css/style.css" />
+  <script type="module" src="assets/js/main.js"></script>
+</head>
 
 <body>
   <!-- Loader -->
@@ -74,7 +74,7 @@
           <label for="language-toggle" class="navbar__toggle--language-label"></label>
         </div>
       </div>
-      <a href="#nav" ><i class="bx bx-menu btn__open navbar__icon"></i></a>
+      <a href="#nav"><i class="bx bx-menu btn__open navbar__icon"></i></a>
       <!-- <a href="#" id="btn__open"><i class="bx bx-menu btn__open navbar__icon"></i></a> -->
     </nav>
   </header>
@@ -83,22 +83,27 @@
     <section id="home" class="home">
       <div class="home__container grid--container">
         <div class="home__image">
-          <img class="body" src="assets/img/Illustration_manversion.png" alt="profile photo"  />
-          <img class="arm" src="assets/img/Illustration_armversion.png" alt="profile photo"  />
+          <img class="body" src="assets/img/Illustration_manversion.png" alt="profile photo" />
+          <img class="arm" src="assets/img/Illustration_armversion.png" alt="profile photo" />
         </div>
 
         <ul class="home__social flex--container">
           <li class="home__social-item">
-            <a class="home__social-link" href="https://linkedin.com/in/dereck-eduardo/" target="_blank"><i class="bx bxl-linkedin"></i></a>
+            <a class="home__social-link" href="https://linkedin.com/in/dereck-eduardo/" target="_blank"><i
+                class="bx bxl-linkedin"></i></a>
           </li>
           <li class="home__social-item">
-            <a class="home__social-link" href="https://wa.me/573233094729?text=Hola,%20quisiera%20contratarte." target="_blank"><i class="bx bxl-whatsapp"></i></a>
+            <a class="home__social-link" href="https://wa.me/573233094729?text=Hola,%20quisiera%20contratarte."
+              target="_blank"><i class="bx bxl-whatsapp"></i></a>
           </li>
           <li class="home__social-item">
-            <a class="home__social-link" href="https://github.com/dereckmg2803" target="_blank"><i class="bx bxl-github"></i></a>
+            <a class="home__social-link" href="https://github.com/dereckmg2803" target="_blank"><i
+                class="bx bxl-github"></i></a>
           </li>
           <li class="home__social-item">
-            <a class="home__social-link" href="mailto:dereck.mg2803@gmail.com?subject=Asunto%20del%20mensaje&body=Cuerpo%20del%20mensaje" target="_blank"><i class="bx bx-envelope"></i></a>
+            <a class="home__social-link"
+              href="mailto:dereck.mg2803@gmail.com?subject=Asunto%20del%20mensaje&body=Cuerpo%20del%20mensaje"
+              target="_blank"><i class="bx bx-envelope"></i></a>
           </li>
         </ul>
 
@@ -106,14 +111,15 @@
           <h1 class="home__title">¡Hola y bienvenidos!</h1>
 
           <p class="home__description">
-            Soy Dereck, Ingeniero de Sistemas. La tecnología es mi mundo, y cada línea de código es una oportunidad para innovar.
+            Soy Dereck, Ingeniero de Sistemas. La tecnología es mi mundo, y cada línea de código es una oportunidad para
+            innovar.
           </p>
         </div>
 
         <div class="home__buttons">
           <a class="btn btn--primary" href="#" title="Descargar mi CV" id="download-cv" rel="noreferrer nofollow">
             Descargar CV
-          </a>                  
+          </a>
         </div>
       </div>
     </section>
@@ -122,7 +128,10 @@
 
       <div class="about__container grid--container">
         <p class="about__description">
-          Encuentro un equilibrio importante en mis pasatiempos, especialmente en el contacto con la naturaleza y las artes marciales. La naturaleza me inspira a mantenerme centrado y renovado, buscando paz y claridad mental en sus espacios tranquilos. El deporte, por otro lado, me ha enseñado disciplina, perseverancia y la importancia de trabajar en equipo, valores que aplico tanto en mi vida personal como profesional. 
+          Encuentro un equilibrio importante en mis pasatiempos, especialmente en el contacto con la naturaleza y las
+          artes marciales. La naturaleza me inspira a mantenerme centrado y renovado, buscando paz y claridad mental en
+          sus espacios tranquilos. El deporte, por otro lado, me ha enseñado disciplina, perseverancia y la importancia
+          de trabajar en equipo, valores que aplico tanto en mi vida personal como profesional.
         </p>
 
         <div class="about__cards flex--container">
@@ -149,33 +158,39 @@
 
       <div class="skills__container grid--container">
         <p class="skills__description flex--container">
-          Soy un profesional con una base sólida en el desarrollo de aplicaciones web y móviles, siempre dispuesto a aprender y adaptarme a nuevas tecnologías. Mis habilidades clave incluyen:        </p>
+          Soy un profesional con una base sólida en el desarrollo de aplicaciones web y móviles, siempre dispuesto a
+          aprender y adaptarme a nuevas tecnologías. Mis habilidades clave incluyen: </p>
 
         <div class="skills__wrapper flex--container">
           <div class="skills__cards flex--container">
             <!--Card 1 -->
             <details class="skills__cards-container" name="moreInfo" open>
               <summary class="skills__cards-title flex--container">
-                <i class="bx bxl-html5 flex--container"></i>
+                <i class="bx bxl-react flex--container"></i>
               </summary>
               <div class="skills__card-container">
-                <h3 class="skills__card-title">HTML</h3>
+                <h3 class="skills__card-title">React</h3>
 
                 <p class="skills__card-description">
-                  Sólidos conocimientos en la creación de estructuras web utilizando HTML5, asegurando una semántica correcta y accesibilidad en el desarrollo de interfaces. Habilidad para crear páginas web bien organizadas, utilizando etiquetas estándar y optimizando el contenido para un mejor rendimiento.
+                  Experiencia en el desarrollo de interfaces dinámicas y componentes reutilizables con React.
+                  Conocimiento en el manejo de estado, props y hooks para construir aplicaciones modernas, eficientes y
+                  escalables.
                 </p>
               </div>
             </details>
+
             <!--Card 2 -->
             <details class="skills__cards-container" name="moreInfo">
               <summary class="skills__cards-title flex--container">
-                <i class="bx bxl-css3 flex--container"></i>
+                <i class="bx bxl-nodejs flex--container"></i>
               </summary>
               <div class="skills__card-container">
-                <h3 class="skills__card-title">CSS3</h3>
+                <h3 class="skills__card-title">Node.js</h3>
 
                 <p class="skills__card-description">
-                  Experiencia en CSS3 para diseñar interfaces visuales atractivas y responsivas. Manejo de Flexbox y Grid para crear diseños fluidos y adaptativos, garantizando que las páginas web se vean bien en diferentes dispositivos.
+                  Habilidades en el desarrollo del lado del servidor utilizando Node.js. Experiencia en la creación de
+                  APIs, integración con bases de datos y construcción de aplicaciones rápidas y escalables con
+                  JavaScript en el backend.
                 </p>
               </div>
             </details>
@@ -188,7 +203,9 @@
                 <h3 class="skills__card-title">Javascript</h3>
 
                 <p class="skills__card-description">
-                  Habilidad en JavaScript para desarrollar interactividad en aplicaciones web. Experiencia en la manipulación del DOM, manejo de eventos y trabajo con JSON para interactuar con APIs. Además, he trabajado con Node.js para desarrollo de back-end y APIs.
+                  Habilidad en JavaScript para desarrollar interactividad en aplicaciones web. Experiencia en la
+                  manipulación del DOM, manejo de eventos y trabajo con JSON para interactuar con APIs. Además, he
+                  trabajado con Node.js para desarrollo de back-end y APIs.
                 </p>
               </div>
             </details>
@@ -201,7 +218,9 @@
                 <h3 class="skills__card-title">Github</h3>
 
                 <p class="skills__card-description">
-                  Uso experto de Git y GitHub para el control de versiones y la colaboración en proyectos de desarrollo. Familiaridad con ramas, merges, pull requests y resolución de conflictos. Este flujo de trabajo me permite colaborar eficazmente en equipos.
+                  Uso experto de Git y GitHub para el control de versiones y la colaboración en proyectos de desarrollo.
+                  Familiaridad con ramas, merges, pull requests y resolución de conflictos. Este flujo de trabajo me
+                  permite colaborar eficazmente en equipos.
                 </p>
               </div>
             </details>
@@ -233,7 +252,8 @@
             <div class="projects__info">
               <h3 class="projects__name">SGPA</h3>
               <p class="projects__description">
-                Plataforma web diseñada para facilitar la gestión de proyectos académicos, utilizando Java, PrimeFaces y XHTML.
+                Plataforma web diseñada para facilitar la gestión de proyectos académicos, utilizando Java, PrimeFaces y
+                XHTML.
               </p>
 
               <div class="projects__buttons">
@@ -254,7 +274,8 @@
             <div class="projects__info">
               <h3 class="projects__name">Autosoft</h3>
               <p class="projects__description">
-                Aplicativo web para optimizar las operaciones internas de talleres automotrices, utilizando PHP y MySQL para la lógica de negocio y base de datos.
+                Aplicativo web para optimizar las operaciones internas de talleres automotrices, utilizando PHP y MySQL
+                para la lógica de negocio y base de datos.
               </p>
 
               <div class="projects__buttons">
@@ -275,7 +296,8 @@
             <div class="projects__info">
               <h3 class="projects__name">TouriC</h3>
               <p class="projects__description">
-                Chatbot interactivo para proporcionar información turística en Cartagena, desarrollado con Flutter (Dart) y la API de Gemini.
+                Chatbot interactivo para proporcionar información turística en Cartagena, desarrollado con Flutter
+                (Dart) y la API de Gemini.
               </p>
 
               <div class="projects__buttons">
@@ -296,7 +318,8 @@
             <div class="projects__info">
               <h3 class="projects__name">Tenisco</h3>
               <p class="projects__description">
-                Plataforma de comercio electrónico desarrollada con React, Redux y Tailwind CSS para la venta de tenis en Colombia.
+                Plataforma de comercio electrónico desarrollada con React, Redux y Tailwind CSS para la venta de tenis
+                en Colombia.
               </p>
 
               <div class="projects__buttons">
@@ -343,7 +366,9 @@
               <i class="bx bxs-envelope"></i>
 
               <span class="contact__info-mail">
-                <a id="mail" href="mailto:dereck.mg2803@gmail.com?subject=Asunto%20del%20mensaje&body=Cuerpo%20del%20mensaje" target="_blank" rel="noreferrer nofollow">
+                <a id="mail"
+                  href="mailto:dereck.mg2803@gmail.com?subject=Asunto%20del%20mensaje&body=Cuerpo%20del%20mensaje"
+                  target="_blank" rel="noreferrer nofollow">
                   dereck.mg2803@gmail.com
                 </a>
               </span>
@@ -405,22 +430,24 @@
 
         <ul class="footer__social-list">
           <li class="footer__social-item">
-            <a class="footer__social-link" href="https://linkedin.com/in/dereck-eduardo/" target="_blank" rel="noreferrer nofollow"><i
-                class="bx bxl-linkedin"></i></a>
+            <a class="footer__social-link" href="https://linkedin.com/in/dereck-eduardo/" target="_blank"
+              rel="noreferrer nofollow"><i class="bx bxl-linkedin"></i></a>
           </li>
 
           <li class="footer__social-item">
-            <a class="footer__social-link" href="https://wa.me/573233094729?text=Hola,%20quisiera%20contratarte." target="_blank" rel="noreferrer nofollow"><i
-                class="bx bxl-whatsapp"></i></a>
+            <a class="footer__social-link" href="https://wa.me/573233094729?text=Hola,%20quisiera%20contratarte."
+              target="_blank" rel="noreferrer nofollow"><i class="bx bxl-whatsapp"></i></a>
           </li>
 
           <li class="footer__social-item">
-            <a class="footer__social-link" href="https://github.com/dereckmg2803" target="_blank" rel="noreferrer nofollow"><i
-                class="bx bxl-github"></i></a>
+            <a class="footer__social-link" href="https://github.com/dereckmg2803" target="_blank"
+              rel="noreferrer nofollow"><i class="bx bxl-github"></i></a>
           </li>
 
           <li class="footer__social-item">
-            <a class="footer__social-link" href="mailto:dereck.mg2803@gmail.com?subject=Asunto%20del%20mensaje&body=Cuerpo%20del%20mensaje" target="_blank" rel="noreferrer nofollow"><i class="bx bx-envelope"></i></a>
+            <a class="footer__social-link"
+              href="mailto:dereck.mg2803@gmail.com?subject=Asunto%20del%20mensaje&body=Cuerpo%20del%20mensaje"
+              target="_blank" rel="noreferrer nofollow"><i class="bx bx-envelope"></i></a>
           </li>
         </ul>
       </div>
